evaluation_artifacts/execution_sample_out/substitution_cipher/18-1854-002.txt
An error happened during execution:
  File "/tmp/tmpzq4ln3jp.py", line 52
    p[i} =1 if dp_max[i} >0 else 0
       ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '['
